Click to Open PDF: Correctly handle Content-disposition: attachment.

Previously, the Click to Open PDF feature was not correctly handling
navigations with Content-disposition: attachment.

This CL brings its handling in line with the MUST download logic
already present in content/ and adds a test.

This should fix Gmail PDF attachment behavior.

Bug: 845443
Change-Id: Ib4947c1ce18ce5fb1e7c84c2dd5852a60f5d4954
Reviewed-on: https://chromium-review.googlesource.com/1069309
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Commit-Queue: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561134}
Former-commit-id: 6c6905a98aef2b4bdee9590ec24f80655f2a01b2